[package]
name = "tilde"
description = "Codegolf language - stack-based, small executable"
homepage = "tbd"
version = "0.1.0"
edition = "2021"
authors = ["Mark <mverleg.noreply@gmail.com>"]

[features]
gen = []

[dependencies]

[build-dependencies]

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
