[package]
name = "tilde"
description = "Codegolf language - stack-based, small executable"
homepage = "tbd"
version = "0.1.0"
edition = "2021"
authors = ["Mark <mverleg.noreply@gmail.com>"]
build = "build.rs"

[features]
gen = []

[[bench]]
name = "startup_analyze"
harness = false

[dependencies]
strum = { version = "0.24", default-features = false }
strum_macros = { version = "0.24", default-features = false }
tinyvec = { version = "1.6.0", default-features = false, features = ["rustc_1_57"] }
tinyvec_string = { version = "0.3.2", features = ["rustc_1_57"] }
fnv = "1.0.7"  # TODO @mverleg: TEMPORARY! REMOVE THIS!
nohash-hasher = "0.2.0"

[dev-dependencies]
criterion = "0.4.0"

[build-dependencies]
tinyvec = { version = "1.6.0", default-features = false, features = ["rustc_1_57"] }
tinyvec_string = { version = "0.3.2", features = ["rustc_1_57"] }

[profile.release]
#opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
#panic = 'abort'     # Abort on panic
#strip = true        # Strip symbols from binary
#TODO @mverleg: re-enablei
