[package]
name = "tilde"
description = "Codegolf language - stack-based, small executable"
homepage = "tbd"
version = "0.1.0"
edition = "2021"
authors = ["Mark <mverleg.noreply@gmail.com>"]
license = "Apache-2.0"

build = "build.rs"

[features]
gen = []

[[bench]]
name = "startup_analyze"
harness = false

[dependencies]
tinyvec = { version = "1.6.0", default-features = false, features = ["alloc", "rustc_1_57"] }
tinyvec_string = { version = "0.3.2", default-features = false, features = ["rustc_1_57"] }
fnv = { version = "1.0.7", default-features = false, features = ["std"] }
base64 = { version = "0.21.0", default-features = false, features = ["std"] }
regex = { version = "1.7.1", default-features = false, features = ["std"] }

#[dev-dependencies]
#criterion = "0.4.0"

[build-dependencies]
tinyvec = { version = "1.6.0", default-features = false, features = ["rustc_1_57"] }
tinyvec_string = { version = "0.3.2", features = ["rustc_1_57"] }
regex = { version = "1.7.1", default-features = false, features = ["std"] }

[profile.release]
opt-level = 3       # Optimize for speed ('z' for size).
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.c
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary
